--- a/index.html
+++ b/index.html
@@ -1,205 +1,10 @@
 <!doctype html>
 <html lang="zh-CN">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>浪之环 · Today Demo (Single File)</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @keyframes orbit-spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-    @keyframes counter-spin { from { transform: rotate(0deg); } to { transform: rotate(-360deg); } }
-    @keyframes breath {
-      0%{ transform: scale(0.90); opacity: .65 }
-      36.36%{ transform: scale(1.06); opacity:.85 }
-      45.45%{ transform: scale(1.06); opacity:.85 }
-      100%{ transform: scale(0.85); opacity:.60 }
-    }
-    :root { --spin: 80s; }
-    .orbit   { animation: orbit-spin var(--spin) linear infinite; will-change: transform; }
-    .counter { animation: counter-spin var(--spin) linear infinite; will-change: transform; }
-    .pane {
-      background: radial-gradient(1200px 600px at 50% -200px, rgba(255,255,255,.08), transparent 60%) ,
-                  linear-gradient(180deg, #0b1220, #04070c);
-    }
-  </style>
-  <!-- React & ReactDOM UMD -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <!-- Babel Standalone for in-browser TSX/JSX -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-</head>
-<body class="min-h-[100dvh] bg-black text-white">
-  <div id="root"></div>
-
-  <script type="text/babel" data-presets="typescript,react">
-    const { useState, useMemo, useRef, useEffect } = React;
-
-    const FLIP_COUNT = 8;
-    const POOLS = ["health", "social", "study", "life"];
-
-    const POOL_NAME = {
-      health: "健康",
-      social: "社交",
-      study:  "学习",
-      life:   "生活",
-    };
-
-    // --------- 时间与存储 ---------
-    function fmtDate(d = new Date()) {
-      const y=d.getFullYear(), m=String(d.getMonth()+1).padStart(2,"0"), day=String(d.getDate()).padStart(2,"0");
-      return \`\${y}-\${m}-\${day}\`;
-    }
-    const today = fmtDate();
-
-    function loadState() {
-      try {
-        const raw = localStorage.getItem("ring:t1");
-        return raw ? JSON.parse(raw) : null;
-      } catch {
-        return null;
-      }
-    }
-    function saveState(s) { localStorage.setItem("ring:t1", JSON.stringify(s)); }
-
-    // --------- 外环组件（保证旋转不断） ---------
-    function getAnimDelayOnce() {
-      if (typeof window === "undefined") return "0s";
-      const w = window;
-      if (!w.__RING_TIDE_T0__) w.__RING_TIDE_T0__ = performance.now();
-      const elapsed = (performance.now() - w.__RING_TIDE_T0__) / 1000;
-      return \`-\${elapsed}s\`; // 负延迟保证续帧
-    }
-
-    function orbitPropsEqual(prevProps, nextProps) {
-      const a = prevProps.flipTasks || [];
-      const b = nextProps.flipTasks || [];
-      if (a.length !== b.length) return false;
-      for (let i=0;i<a.length;i++) {
-        if (!!a[i]?.done !== !!b[i]?.done) return false;
-      }
-      return true;
-    }
-
-    const OuterOrbit = React.memo(function OuterOrbit({ center, radius, angles, flipTasks, onPress, onHover, onLeave }){
-      const box = radius * 2 + 2;
-      const delayRef = useRef(getAnimDelayOnce()); // 固定一次，避免每次渲染改变 animationDelay
-
-      return (
-        <div className="absolute" style={{ left:center.x, top:center.y, transform: "translate(-50%, -50%)" }}>
-          <div className="relative orbit" style={{ width: box, height: box, animationDelay: delayRef.current }}>
-            <div className="absolute inset-0 rounded-full border border-white/35" />
-            {angles.map((angle, i) => {
-              const task = flipTasks?.[i];
-              if (!task) return null;
-              const trans = \`rotate(\${angle}deg) translate(\${radius}px) rotate(-\${angle}deg)\`;
-              return (
-                <div key={i} className="absolute left-1/2 top-1/2" style={{ transform: "translate(-50%,-50%)" }}>
-                  <div className="absolute -translate-x-1/2 -translate-y-1/2" style={{ transform: trans }}>
-                    <button
-                      className={\`w-5 h-5 border \${task.done ? "bg-white/90 border-white" : "border-white"} rounded-[3px] counter\`}
-                      style={{ animationDelay: delayRef.current }}
-                      title={task.label}
-                      onClick={() => onPress(i)}
-                      onMouseEnter={() => onHover?.(task.label)}
-                      onMouseLeave={() => onLeave?.()}
-                    />
-                  </div>
-                </div>
-              );
-            })}
-          </div>
-        </div>
-      );
-    }, orbitPropsEqual);
-
-    // --------- 主页面 ---------
-    function App() {
-      const [state, setState] = useState(() => {
-        return loadState() || {
-          season: { rings: 0, coins: 0 },
-          days: { [today]: { flipTasks: Array.from({length: FLIP_COUNT}, (_,i)=>({ label: "Flip Task " + (i+1), done: false })), forged: false } },
-        };
-      });
-
-      useEffect(() => saveState(state), [state]);
-
-      const size = 640;
-      const center = { x: size/2, y: size/2 };
-      const orbitR = 220;
-
-      // 固定角度
-      const angles = useMemo(() => {
-        const step = 360 / FLIP_COUNT;
-        return Array.from({length: FLIP_COUNT}, (_,i)=> i*step);
-      }, []);
-
-      const flipTasks = state.days[today]?.flipTasks || [];
-
-      function toggleFlipTask(idx) {
-        setState(prev => {
-          const day = { ...(prev.days[today] || {}) };
-          const tasks = day.flipTasks ? [...day.flipTasks] : Array.from({length: FLIP_COUNT}, (_,i)=>({ label: "Flip Task " + (i+1), done: false }));
-          tasks[idx] = { ...tasks[idx], done: !tasks[idx].done };
-          day.flipTasks = tasks;
-          return { ...prev, days: { ...prev.days, [today]: day } };
-        });
-      }
-
-      return (
-        <div className="min-h-[100dvh] pane p-6">
-          <div className="max-w-6xl mx-auto">
-            <div className="flex items-center justify-between mb-6">
-              <div className="flex items-center gap-3">
-                <div className="w-5 h-5 rounded-full bg-white/70" />
-                <h1 className="text-2xl md:text-3xl font-semibold">浪之环 · Today</h1>
-              </div>
-              <div className="flex items-center gap-3">
-                <div className="px-3 py-1.5 rounded-xl bg-white/10 border border-white/15 flex items-center gap-2">
-                  <span className="text-sm">◯</span>
-                  <span className="text-sm">{state.season.rings}</span>
-                </div>
-                <div className="px-3 py-1.5 rounded-xl bg-white/10 border border-white/15 flex items-center gap-2">
-                  <span className="text-sm">◇</span>
-                  <span className="text-sm">{state.season.coins + (flipTasks.filter(t=>t.done).length || 0)}</span>
-                </div>
-              </div>
-            </div>
-
-            <div className="flex items-center justify-center">
-              <div className="relative rounded-3xl border border-white/10 bg-white/5 backdrop-blur p-6 shadow-sm" style={{ width: size, height: size }}>
-                {/* 中心圆与象限分割 */}
-                <div className="absolute left-1/2 top-1/2" style={{ transform: "translate(-50%,-50%)" }}>
-                  <div className="relative w-[360px] h-[360px]">
-                    <div className="absolute inset-0 rounded-full border border-white/25"></div>
-                    <div className="absolute inset-10 rounded-full border border-white/10"></div>
-                    <div className="absolute inset-0 border-t border-white/15 top-1/2"></div>
-                    <div className="absolute inset-0 border-l border-white/15 left-1/2"></div>
-                    <div className="absolute left-1/4 top-[12%] text-xs opacity-70">健康</div>
-                    <div className="absolute right-[12%] top-1/4 text-xs opacity-70">社交</div>
-                    <div className="absolute left-1/4 bottom-[12%] text-xs opacity-70">学习</div>
-                    <div className="absolute right-[12%] bottom-1/4 text-xs opacity-70">生活</div>
-                  </div>
-                </div>
-
-                {/* 外环 */}
-                <OuterOrbit
-                  center={center}
-                  radius={orbitR}
-                  angles={angles}
-                  flipTasks={flipTasks}
-                  onPress={toggleFlipTask}
-                  onHover={(label)=>{}}
-                  onLeave={()=>{}}
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      );
-    }
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(<App />);
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>测试页面</title>
+  </head>
+  <body>
+    <h1 style="color:red;">hello world</h1>
+  </body>
 </html>
