--- a/index.html
+++ b/index.html
@@ -154,12 +154,10 @@
                   <div className="relative w-[360px] h-[360px]">
                     <div className="absolute inset-0 rounded-full border border-white/25"></div>
                     <div className="absolute inset-10 rounded-full border border-white/10"></div>
-                    <div className="absolute inset-0 border-t border-white/15 top-1/2"></div>
-                    <div className="absolute inset-0 border-l border-white/15 left-1/2"></div>
-                    <div className="absolute left-1/4 top-[12%] text-xs opacity-70">健康</div>
-                    <div className="absolute right-[12%] top-1/4 text-xs opacity-70">社交</div>
-                    <div className="absolute left-1/4 bottom-[12%] text-xs opacity-70">学习</div>
-                    <div className="absolute right-[12%] bottom-1/4 text-xs opacity-70">生活</div>
+                    <div className="absolute left-1/4 top-1/4 text-xs opacity-70">健康</div>
+                    <div className="absolute right-1/4 top-1/4 text-xs opacity-70">社交</div>
+                    <div className="absolute left-1/4 bottom-1/4 text-xs opacity-70">学习</div>
+                    <div className="absolute right-1/4 bottom-1/4 text-xs opacity-70">生活</div>
                   </div>
                 </div>
 
