--- a/index.html
+++ b/index.html
@@ -68,19 +68,26 @@
     }
 
     const OuterOrbit = React.memo(function OuterOrbit({ center, radius, angles, flipTasks, onPress, onHover, onLeave }) {
-      const box = radius*2 + 2;
+      const box = radius * 2;   // 容器宽高 = 外圈直径
+      const blockSize = 20;     // 方块宽高(px)，你可以调整
       const delayRef = useRef(getAnimDelayOnce());
       return (
-        <div className="absolute" style={{ left:center.x, top:center.y, transform: "translate(-50%, -50%)" }}>
+        <div className="absolute" style={{ left: center.x, top: center.y, transform: "translate(-50%, -50%)" }}>
           <div className="relative orbit" style={{ width: box, height: box, animationDelay: delayRef.current }}>
             <div className="absolute inset-0 rounded-full border border-white/35" />
             {angles.map((angle, i) => {
               const task = flipTasks?.[i];
               if (!task) return null;
+              // 让方块中心点正好在外圈线上
               const trans = `rotate(${angle}deg) translate(${radius}px) rotate(-${angle}deg)`;
               return (
                 <div key={i} className="absolute left-1/2 top-1/2" style={{ transform: "translate(-50%,-50%)" }}>
-                  <div className="absolute -translate-x-1/2 -translate-y-1/2" style={{ transform: trans }}>
+                  <div className="absolute"
+                    style={{
+                      width: blockSize, height: blockSize,
+                      left: -blockSize/2, top: -blockSize/2,
+                      transform: trans,
+                    }}>
                     <button
                       className={`w-5 h-5 border ${task.done ? "bg-white/90 border-white" : "border-white"} rounded-[3px] counter`}
                       style={{ animationDelay: delayRef.current }}
