--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       });
       useEffect(() => saveState(state), [state]);
 
-      const outerR = 220;    // 外圈半径
+      const orbitR = 220;    // 外圈半径
       const size = 640;      // 画布区尺寸
       const center = { x: size/2, y: size/2 };
 
