--- a/index.html
+++ b/index.html
@@ -68,26 +68,19 @@
     }
 
     const OuterOrbit = React.memo(function OuterOrbit({ center, radius, angles, flipTasks, onPress, onHover, onLeave }) {
-      const box = radius * 2;   // 容器宽高 = 外圈直径
-      const blockSize = 20;     // 方块宽高(px)，你可以调整
+      const box = radius*2 + 2;
       const delayRef = useRef(getAnimDelayOnce());
       return (
-        <div className="absolute" style={{ left: center.x, top: center.y, transform: "translate(-50%, -50%)" }}>
+        <div className="absolute" style={{ left:center.x, top:center.y, transform: "translate(-50%, -50%)" }}>
           <div className="relative orbit" style={{ width: box, height: box, animationDelay: delayRef.current }}>
             <div className="absolute inset-0 rounded-full border border-white/35" />
             {angles.map((angle, i) => {
               const task = flipTasks?.[i];
               if (!task) return null;
-              // 让方块中心点正好在外圈线上
               const trans = `rotate(${angle}deg) translate(${radius}px) rotate(-${angle}deg)`;
               return (
                 <div key={i} className="absolute left-1/2 top-1/2" style={{ transform: "translate(-50%,-50%)" }}>
-                  <div className="absolute"
-                    style={{
-                      width: blockSize, height: blockSize,
-                      left: -blockSize/2, top: -blockSize/2,
-                      transform: trans,
-                    }}>
+                  <div className="absolute -translate-x-1/2 -translate-y-1/2" style={{ transform: trans }}>
                     <button
                       className={`w-5 h-5 border ${task.done ? "bg-white/90 border-white" : "border-white"} rounded-[3px] counter`}
                       style={{ animationDelay: delayRef.current }}
@@ -106,6 +99,7 @@
     }, orbitPropsEqual);
 
     function App() {
+      const orbitR = 220; // ★★★ 这一行是关键，必须加上！
       const [state, setState] = useState(() => {
         return loadState() || {
           season: { rings: 0, coins: 0 },
@@ -114,8 +108,7 @@
       });
       useEffect(() => saveState(state), [state]);
 
-      const orbitR = 220;    // 外圈半径
-      const size = 640;      // 画布区尺寸
+      const size = 640;
       const center = { x: size/2, y: size/2 };
 
       const angles = useMemo(() => {
@@ -161,10 +154,12 @@
                   <div className="relative w-[360px] h-[360px]">
                     <div className="absolute inset-0 rounded-full border border-white/25"></div>
                     <div className="absolute inset-10 rounded-full border border-white/10"></div>
-                    <div className="absolute left-1/4 top-1/4 text-xs opacity-70">健康</div>
-                    <div className="absolute right-1/4 top-1/4 text-xs opacity-70">社交</div>
-                    <div className="absolute left-1/4 bottom-1/4 text-xs opacity-70">学习</div>
-                    <div className="absolute right-1/4 bottom-1/4 text-xs opacity-70">生活</div>
+                    <div className="absolute inset-0 border-t border-white/15 top-1/2"></div>
+                    <div className="absolute inset-0 border-l border-white/15 left-1/2"></div>
+                    <div className="absolute left-1/4 top-[12%] text-xs opacity-70">健康</div>
+                    <div className="absolute right-[12%] top-1/4 text-xs opacity-70">社交</div>
+                    <div className="absolute left-1/4 bottom-[12%] text-xs opacity-70">学习</div>
+                    <div className="absolute right-[12%] bottom-1/4 text-xs opacity-70">生活</div>
                   </div>
                 </div>
 
