--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
     <meta charset="UTF-8">
     <style>
       body {
-      margin: 0;
-      background-color: #0a0a23;
-      height: 100vh;
+          margin: 0;
+          background-color: #0a0a23;
+          height: 100vh;
+      }
+
+      h1 {
+          position: fixed; 
+          top: 0; left: 0; right: 0;
+          padding: 12px 16px;
+          font-size: 20px;
+          font-weight: 600;
+          color: #e6e8ff;
       }
     </style>
 </head>
-<body></body>
+<body>
+    <h1>浪环 · Today</h1>h1
+</body>
 </html>
