--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       }
 
       .panel {
-          width: min(900px, 90vw);
-          height: 60vh;
+          margin-top: 24px;
+          width: min(1100px, 92vw);
+          height: 80vh;
           backgound: rgba(255, 255, 255, 0.30); /*透明度：越小越透明*/
           border-radius: 20px;
-          border: 1px solid rgba(255,255,255,0.1);
+          border: 1px solid rgba(255,255,255,0.3);
           box-shadow: 0 6px 18px rgba(0,0,0,0.25);
           backdrop-filter: blur(6px); /*毛玻璃？*/
           -webkit-backdrop-filter: blur(6px);
