--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <style>
+      :root {
+          --gap-x: 40px; /*左右边距*/
+          --gap-top: 96px; /*顶部边距*/
+          --gap-bot: 40px; /*底部边距*/
+      }
+        
       body {
           margin: 0;
           background-color: #0a0a23;
@@ -27,7 +33,7 @@
           height: calc(100vh - var(--gap-top) - var(--gap-bot));
           margin: var(--gap-top) var(--gap-x) var(--gap-bot);
           
-          backgound: rgba(255, 255, 255, 0.5); /*透明度：越小越透明*/
+          background: rgba(255, 255, 255, 0.5); /*透明度：越小越透明*/
           border-radius: 20px;
           border: 1px solid rgba(255,255,255,0.2);
           box-shadow: 0 6px 18px rgba(0,0,0,0.25);
@@ -39,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h1>浪环 · Today</h1>h1
+    <h1>浪环 · Today</h1>
     <div class="panel"></div>
 </body>
 </html>
