--- a/index.html
+++ b/index.html
@@ -25,7 +25,56 @@
           font-size: 20px;
           font-weight: 600;
           color: #e6e8ff;
+          z-index: 10;
       }
+        
+      h1 a {
+          display: inline-block; 
+          color: inherit; 
+          text-decoration: none;
+      }
+
+      h1 .menu {
+          position: absolute;
+          top: 0;
+          left: 100%; /*紧贴标题右侧*/
+          margin-left: 10px;
+          list-style: none;
+          padding: 8px;
+          margin-top: 0;
+
+          background: rgba(255, 255, 255, 0.1); /*后续要加圆角要在这后面加*/
+          border: 1px solid rgba (255, 255, 255, 0.2);
+          border-radius: 20px; 
+          box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+          backdrop-filter: blur(6px);
+          -webkit-backdrop-filter: blur(6px);
+
+          opacity: 0;
+          transform: translateX(-8px);
+          pointer-events: none;
+          transition: opacity .18s ease, transform .18s ease;
+      }
+      /*鼠标悬停展开menu*/
+      h1: hover .menu,
+      h1: focus-within .menu {
+          opacity: 1;
+          transform: translateX(0);
+          pointer0events: auto;
+      }
+
+      /*菜单样式*/
+      h1 .menu li {margin: 4px 2px; }
+      h1 .menu a {
+          display: block;
+          padding: 8px 12px;
+          border-radius: 20px;
+          color: #e6e8ff;
+          text-decoration: none;
+          white-space: nowrap;
+      }
+
+      h1 .menu a:hover { background: rgba (255,255,255,0.1); }
 
       .panel {
           box-sizing: border-box;
@@ -45,7 +94,13 @@
     </style>
 </head>
 <body>
-    <h1>浪环 · Today</h1>
+    <h1>
+        <a href="index.html">浪环 · Today</a>
+        <ul class="menu">
+            <li><a href="index.html">Today</a></li>
+            <li><a href="pools.html">Pools</a></li>
+        </ul>
+    </h1>
     <div class="panel"></div>
 </body>
 </html>
