--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
       h1 {
           position: fixed; 
-          top: 0; left: 0; right: 0;
+          top: 0; left: 0; width: max-content;
           padding: 12px 16px;
           font-size: 20px;
           font-weight: 600;
           color: #e6e8ff;
           z-index: 10;
+          display: inline-block;
       }
         
       h1 a {
@@ -44,7 +45,7 @@
           margin-top: 0;
 
           background: rgba(255,255,255,0.1); /*后续要加圆角要在这后面加*/
-          border: 1px solid rgba (255,255,255,0.2);
+          border: 1px solid rgba(255,255,255,0.2);
           border-radius: 20px; 
           box-shadow: 0 6px 18px rgba(0,0,0,0.25);
           backdrop-filter: blur(6px);
@@ -74,7 +75,7 @@
           white-space: nowrap;
       }
 
-      h1 .menu a:hover { background: rgba (255,255,255,0.1); }
+      h1 .menu a:hover { background: rgba(255,255,255,0.1); }
 
       .panel {
           box-sizing: border-box;
