--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
           transform: translateX(-8px);
           pointer-events: none;
           transition: opacity .18s ease, transform .18s ease;
+
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 20px;
+          white-space: nowrap;
+          padding: 8px 12 px:
       }
       /*鼠标悬停展开menu*/
       h1:hover .menu,
@@ -65,14 +72,11 @@
       }
 
       /*菜单样式*/
-      h1 .menu li {margin: 4px 2px; }
+      h1 .menu li {margin: 0; }
       h1 .menu a {
-          display: block;
-          padding: 8px 12px;
-          border-radius: 20px;
-          color: #e6e8ff;
-          text-decoration: none;
-          white-space: nowrap;
+          display: inline-block;
+          padding: 6px 10px;
+          border-radius: 8px;
       }
 
       h1 .menu a:hover { background: rgba(255,255,255,0.1); }
