--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           color: #e6e8ff;
           z-index: 10;
           display: inline-block;
+          padding-right: 28px;
       }
         
       h1 a {
@@ -38,8 +39,8 @@
       h1 .menu {
           position: absolute;
           top: 0;
-          left: 100%; /*紧贴标题右侧*/
-          margin-left: 10px;
+          left: calc(100% - 28px); 
+          margin-left: 0;
           list-style: none;
           padding: 8px;
           margin-top: 0;
