--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       h1 .menu {
           position: absolute;
           top: 0;
-          left: calc(100% - 28px); 
-          margin-left: 0;
+          left: 100%; 
+          margin-left: 10px;
           list-style: none;
           padding: 8px;
           margin-top: 0;
@@ -60,7 +60,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
-          gap: 20px;
+          gap: 32px;
           white-space: nowrap;
           padding: 8px 12 px:
       }
