--- a/index.html
+++ b/index.html
@@ -20,14 +20,27 @@
 
       h1 {
           position: fixed; 
-          top: 0; left: 0; width: max-content;
+          top: 0; left: 0;
+          display: inline-block;
           padding: 12px 16px;
           font-size: 20px;
           font-weight: 600;
           color: #e6e8ff;
           z-index: 10;
+
+      }
+
+      h1::before {
+          content: "";
+          position: fixed;
+          top: 0; left: 0; right: 0;
+          height: var(--gap-top, 96px);
+          z-index: 9;
+      }
+      h1 > a {
           display: inline-block;
-          padding-right: 28px;
+          color: inherit;
+          text-decoration: none;
       }
         
       h1 a {
@@ -39,16 +52,21 @@
       h1 .menu {
           position: absolute;
           top: 0;
-          left: 100%; 
-          margin-left: 10px;
+          left: calc(100% - 28px); 
+          margin: 0;
+          padding: 8px 12px;
           list-style: none;
-          padding: 8px;
-          margin-top: 0;
 
-          background: rgba(255,255,255,0.1); /*后续要加圆角要在这后面加*/
-          border: 1px solid rgba(255,255,255,0.2);
-          border-radius: 20px; 
-          box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 24px;
+          white-space: nowrap;
+          
+          background: rgba(255,255,255,0.10); /*后续要加圆角要在这后面加*/
+          border: 1px solid rgba(255,255,255,0.18);
+          border-radius: 12px; 
+          box-shadow: 0 6px 18px rgba(0,0,0,0.35);
           backdrop-filter: blur(6px);
           -webkit-backdrop-filter: blur(6px);
 
@@ -56,13 +74,7 @@
           transform: translateX(-8px);
           pointer-events: none;
           transition: opacity .18s ease, transform .18s ease;
-
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          gap: 32px;
-          white-space: nowrap;
-          padding: 8px 12 px:
+          z-index: 11;
       }
       /*鼠标悬停展开menu*/
       h1:hover .menu,
@@ -73,11 +85,13 @@
       }
 
       /*菜单样式*/
-      h1 .menu li {margin: 0; }
+      h1 .menu li {margin: 0; padding: 0;}
       h1 .menu a {
           display: inline-block;
           padding: 6px 10px;
           border-radius: 8px;
+          color: #e6e8ff;
+          text-decoration: none;
       }
 
       h1 .menu a:hover { background: rgba(255,255,255,0.1); }
