--- a/index.html
+++ b/index.html
@@ -35,40 +35,29 @@
           position: fixed;
           top: 0; left: 0; right: 0;
           height: var(--gap-top, 96px);
-          z-index: 9;
       }
       h1 > a {
           display: inline-block;
           color: inherit;
           text-decoration: none;
       }
-        
-      h1 a {
-          display: inline-block; 
-          color: inherit; 
-          text-decoration: none;
-      }
 
       h1 .menu {
-          position: absolute;
-          top: 0;
-          left: calc(100% - 28px); 
-          margin: 0;
-          padding: 8px 12px;
-          list-style: none;
-
+          position: fixed;
+          top: 0; left: 0; right: 0;
+          height: var(--gap-top, 96px); 
           display: flex;
-          flex-direction: row;
           align-items: center;
-          gap: 24px;
-          white-space: nowrap;
+          gap: 28 px;
+          padding: 0 var(--gap-x, 40px);
+          margin: 0;
+          list-style: none;
           
-          background: rgba(255,255,255,0.10); /*后续要加圆角要在这后面加*/
-          border: 1px solid rgba(255,255,255,0.18);
-          border-radius: 12px; 
-          box-shadow: 0 6px 18px rgba(0,0,0,0.35);
-          backdrop-filter: blur(6px);
-          -webkit-backdrop-filter: blur(6px);
+          background: transparent;
+          border: 0;
+          box-shadow: none;
+          backdrop-filter: none;
+          -webkit-backdrop-filter: none;
 
           opacity: 0;
           transform: translateX(-8px);
@@ -76,25 +65,31 @@
           transition: opacity .18s ease, transform .18s ease;
           z-index: 11;
       }
-      /*鼠标悬停展开menu*/
+      /*鼠标在顶带内显示菜单*/
       h1:hover .menu,
-      h1:focus-within .menu {
+      h1:focus-within .menu, 
+      h1 .menu:hover {
           opacity: 1;
-          transform: translateX(0);
+          transform: none;
           pointer-events: auto;
       }
 
-      /*菜单样式*/
-      h1 .menu li {margin: 0; padding: 0;}
       h1 .menu a {
           display: inline-block;
           padding: 6px 10px;
-          border-radius: 8px;
+          border-radius: 6px;
           color: #e6e8ff;
           text-decoration: none;
+          transition: color .18s ease, text-shadow .18s ease;
       }
 
-      h1 .menu a:hover { background: rgba(255,255,255,0.1); }
+      h1 .menu a:hover,
+      hi .menu a:focus-visible {
+          color: #ffffff;
+          text-shadow:
+              0 0 6px rgba(255,255,255,0.35),
+              0 0 14px rgba(138,167,255,0.35);
+      }
 
       .panel {
           box-sizing: border-box;
