--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
           padding: 0 var(--gap-x, 40px);
           margin: 0;
           list-style: none;
+
+          padding-left: calc(var(--gap-x, 40px) + 140px);
           
           background: transparent;
           border: 0;
