--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
           -webkit-backdrop-filter: none;
 
           opacity: 0;
-          transform: translateX(-8px);
           pointer-events: none;
-          transition: opacity .18s ease, transform .18s ease;
-          z-index: 11;
+          transform: none !important;
+          transition: opacity 0.15s ease;
       }
       /*鼠标在顶带内显示菜单*/
       h1:hover .menu,
