--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       h1 .menu {
           position: fixed;
           top: 0; left: 0; right: 0;
-          height: var(--gap-top, 100px); 
+          height: var(--gap-top, 106px); 
           display: flex;
           align-items: center;
           gap: 28 px;
           margin: 0;
           list-style: none;
 
-          padding-left: calc(var(--gap-x, 200px) + 96+28px);
+          padding-left: calc(var(--gap-x, 200px) + 140px);
           
           background: transparent;
           border: 0;
