--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       }
       /*鼠标在顶带内显示菜单*/
       h1:hover .menu,
-      h1:focus-within .menu, 
+      h1:focus-within .menu, {
           opacity: 1;
           pointer-events: auto;
       }
