--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           opacity: 0;
           pointer-events: none;
           transition: opacity 0.15s ease;
-          index: 11;
+          z-index: 11;
       }
       /*鼠标在顶带内显示菜单*/
      
@@ -90,6 +90,25 @@
           -webkit-backdrop-filter: blur(6px);
           box-sizing: border-box;
           padding: 16px;
+      }
+
+      h1:hover .menu,
+      h1: focus-within .menu {
+          opacity: 1;
+          pointer-events: auto;
+      }
+      h1::before{
+          content:"";
+          position: fixed;
+          top:0; left:0 ;right:0;
+          height: 0;
+          pointer-events: none;
+          z-index: 9;
+      }
+      h1:hover::before,
+      h1:focus-within::before{
+          height: var(--gap-top, 72px);
+          pointer-events: auto;
       }
     </style>
 </head>
