--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
           --gap-x: 40px; /*左右边距*/
           --gap-top: 72px; /*顶部边距*/
           --gap-bot: 40px; /*底部边距*/
+          --
       }
-        
+/*背景啥的*/ 
       body {
           margin: 0;
           background-color: #0a0a23;
@@ -17,11 +18,22 @@
           justify-content: center;
           align-items: flex-start;
       }
-
+/*标题*/
+      h1 {
+          position: fixed; 
+          top: 0; left: 0;
+          display: inline-block;
+          padding: 12px 16px;
+          font-size: 20px;
+          font-weight: 570;
+          color: #e6e8ff;
+          z-index: 10;
+      }
+        
       h1 .menu {
           position: fixed;
           top: 0; left: 0; right: 0;
-          height: var(--gap-top, 96px); 
+          height: var(--gap-top); 
           display: flex;
           align-items: center;
           gap: 28px;
@@ -62,16 +74,6 @@
           pointer-events: auto;
       }
 
-      h1 {
-          position: fixed; 
-          top: 0; left: 0;
-          display: inline-block;
-          padding: 12px 16px;
-          font-size: 20px;
-          font-weight: 600;
-          color: #e6e8ff;
-          z-index: 10;
-      }
       h1 > a {
           display: inline-block;
           color: inherit;
