--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
           --gap-x: 40px; /*左右边距*/
           --gap-top: 72px; /*顶部边距*/
           --gap-bot: 40px; /*底部边距*/
-          --
+          --bgcolor: #0a0a23;
       }
 /*背景啥的*/ 
       body {
           margin: 0;
-          background-color: #0a0a23;
+          background-color: var(--bgcolor);
           min-height: 100vh;
           padding-top: 56px;
           display: flex;
