--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
           --gap-top: 72px; /*顶部边距*/
           --gap-bot: 40px; /*底部边距*/
           --bgcolor: #0a0a23;
+          /*没写的（到时候需要查找就不用翻找了）：
+          h1:
+              font size 20px
+              font weight 570
+              color：#e6e8ff
+          */
       }
 /*背景啥的*/ 
       body {
@@ -22,8 +28,10 @@
       h1 {
           position: fixed; 
           top: 0; left: 0;
+          height: var(--gap-top);
+          line-height: var(--gap-top);
           display: inline-block;
-          padding: 12px 16px;
+          padding: 0px 16px;
           font-size: 20px;
           font-weight: 570;
           color: #e6e8ff;
