--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           font-size: 20px;
           font-weight: 570;
           color: #e6e8ff;
-          z-index: 10;
+          z-index: 11;
       }
         
       h1 .menu {
@@ -43,6 +43,7 @@
           height: var(--gap-top); 
           display: flex;
           align-items: center;
+          font-size: 20px;
           gap: 28px;
           margin: 0;
           list-style: none;
@@ -55,7 +56,7 @@
           pointer-events: none;
           transform: none !important;
           transition: opacity 0.15s ease;
-          z-index: 11;
+          z-index: 10;
       }
       /*鼠标在顶带内显示菜单*/
       h1:hover .menu {
