--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           position: fixed; 
           top: 0; left: 0;
           height: var(--gap-top);
-          display: inline-block;
+          display: flex;
           padding: 12px 16px;
           font-size: 20px;
           font-weight: 570;
