--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           top: 0; left: 0;
           height: var(--gap-top);
           display: flex;
+          align-items:center;
           padding: 12px 16px;
           font-size: 20px;
           font-weight: 570;
