--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 /*标题*/
       h1 {
           position: fixed; 
-          top: 0; left: 0;
+          top: 0; left: 0; right:0;
           height: var(--gap-top);
           display: flex;
           justify-content: center;
@@ -40,7 +40,7 @@
         
       h1 .menu {
           position: fixed;
-          top: 0; left: 0; right: 0;
+          top: 0; left: var(--gap-x); right: 0;
           height: var(--gap-top); 
           display: flex;
           align-items: center;
