--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 /*标题*/
       h1 {
           position: fixed; 
-          top: 0; left: 0; right:0;
+          top: 0; left: 0;
           height: var(--gap-top);
           display: flex;
           justify-content: center;
