--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           top: 0; left: var(--gap-x); right: 0;
           height: var(--gap-top); 
           display: flex;
-          align-items: center;
+          justify-content: center;
+    
           font-size: 20px;
           gap: 28px;
           margin: 0;
