--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
       h1 .menu {
           position: fixed;
           top: 0; left: var(--gap-x); right: 0;
-          height: var(--gap-top); 
+          height: var(--gap-top) + 12px; 
           display: flex;
-          justify-content: center;
-    
+          align-items: center;
           font-size: 20px;
           gap: 28px;
           margin: 0;
