--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       h1 .menu {
           position: fixed;
           top: 0; left: var(--gap-x); right: 0;
-          height: var(--gap-top) + 12px; 
+          height: var(--gap-top); 
           display: flex;
           align-items: center;
           font-size: 20px;
