--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           font-weight: 570;
           color: #e6e8ff;
           z-index: 11;
+          background: rgba(255,0,0,0.2);
       }
         
       h1 .menu {
