--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           margin: 0;
           list-style: none;
           
-          background: transparent;
+          background: rgba(255,0,0,0.2);
           border: 0;
           box-shadow: none;
         
