--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           position: fixed; 
           top: 0; left: 0;
           height: var(--gap-top);
+          line-height: var(--gap-top);
           display: flex;
           justify-content: center;
           padding: 0px 16px;
