--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           font-weight: 570;
           color: #e6e8ff;
           z-index: 11;
+          margin: 0;
           background: rgba(255,0,0,0.2);
       }
         
