--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
         
       h1 .menu {
           position: fixed;
-          top: 0; left: var(--gap-x); right: 0;
+          top: 0; left: 0; right: 0;
           height: var(--gap-top); 
           display: flex;
           align-items: center;
           font-size: 20px;
           gap: 28px;
-          margin: 0;
+          margin-top: 0;
+          margin-left: 160 px;
           list-style: none;
           
           background: rgba(255,0,0,0.2);
