--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </head>
 <body>
     <h1>
-        <a href="index.html">浪环 · Today</a>
+        <a href="index.html">Ring of Tide · Today</a>
         <ul class="menu">
             <li><a href="index.html">Today</a></li>
             <li><a href="pools.html">Pools</a></li>
