--- a/pools.html
+++ b/pools.html
@@ -32,7 +32,7 @@
       position: fixed; top: 0; left: 0; right: 0;
       height: var(--gap-top);
       display: flex; align-items: center;
-      font-size: 20px; gap: 28px; margin-left: 157px;
+      font-size: 20px; gap: 28px; margin-top: 0; margin-left: 157px;
       list-style: none; opacity: 0; pointer-events: none; transition: opacity .15s ease;
     }
     h1:hover .menu, h1:focus-within .menu { opacity: 1; pointer-events: auto; }
