--- a/pools.html
+++ b/pools.html
@@ -40,6 +40,13 @@
     h1:hover::before, h1:focus-within::before { height: var(--gap-top); pointer-events:auto; }
     h1 > a { color: inherit; text-decoration: none; }
     h1 .menu a { padding: 6px 8px; border-radius: 6px; color:#e6e8ff; text-decoration:none; }
+    h1 .menu a:hover,
+    h1 .menu a:focus-visible {
+      color: #ffffff;
+      text-shadow:
+        0 0 6px rgba(255,255,255,0.35),
+        0 0 14px rgba(138,167,255,0.35);
+    }
     .panel {
       box-sizing: border-box;
       width: calc(100vw - 2 * var(--gap-x));
