--- a/pools.html
+++ b/pools.html
@@ -114,7 +114,10 @@
           box-sizing: border-box;
           width: calc(100vw - 2 * var(--gap-x));
           height: calc(100vh - var(--gap-top) - var(--gap-bot));
-          margin: 0 var(--gap-x) var(--gap-bot);
+          margin-top: 0;
+          margin-left: var(--gap-x);
+          margin-right: var(--gap-x);
+          margin-bottom: var(--gap-bot);
           
           background: rgba(255,255,255,0.1); /*透明度：越小越透明*/
           border-radius: 20px;
