--- a/pools.html
+++ b/pools.html
@@ -19,7 +19,7 @@
           margin: 0;
           background-color: var(--bgcolor);
           min-height: 100vh;
-          padding-top: var(--gap-top);
+          padding-top: 0;
           display: flex;
           justify-content: center;
           align-items: flex-start;
