--- a/pools.html
+++ b/pools.html
@@ -19,7 +19,7 @@
           margin: 0;
           background-color: var(--bgcolor);
           min-height: 100vh;
-          padding-top: 0;
+          padding-top: calc(var(--gap-top) - 8px);
           display: flex;
           justify-content: center;
           align-items: flex-start;
