--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           margin: 0;
           background-color: var(--bgcolor);
           min-height: 100vh;
-          padding-top: 56px;
+          padding-top: calc(var(--gap-top) - 8px);
           display: flex;
           justify-content: center;
           align-items: flex-start;
@@ -111,10 +111,13 @@
       }
 
       .panel {
+          position: sticky;
+          top: var(--gap-top);
           box-sizing: border-box;
           width: calc(100vw - 2 * var(--gap-x));
           height: calc(100vh - var(--gap-top) - var(--gap-bot));
-          margin: var(--gap-top) var(--gap-x) var(--gap-bot);
+          margin: 0 var(--gap-x) var(--gap-bot);
+          overflow: auto;
           
           background: rgba(255,255,255,0.1); /*透明度：越小越透明*/
           border-radius: 20px;
@@ -124,6 +127,7 @@
           -webkit-backdrop-filter: blur(6px);
           box-sizing: border-box;
           padding: 16px;
+          
       }
     </style>
 </head>
