--- a/pools.html
+++ b/pools.html
@@ -127,7 +127,17 @@
           -webkit-backdrop-filter: blur(6px);
           box-sizing: border-box;
           padding: 16px;
-          
+      }
+      .world{
+          position: relative;
+          width: 4000px;
+          height: 3000px;
+          margin: 0 auto;
+          background-image: 
+              linear-gradient(rgba(255,255,255,0.05) 1px, transparent 1px), 
+              linear-gradient(90deg, rgba(255,255,255,0.05) 1px, transparent 1px);
+          background-size: 80px 80px; /*网格间距*/
+          border-radius: 16px;
       }
     </style>
 </head>
