--- a/pools.html
+++ b/pools.html
@@ -149,6 +149,15 @@
             <li><a href="pools.html">Pools</a></li>
         </ul>
     </h1>
-    <div class="panel"></div>
+    <div class="panel">
+        <div class="world" aria-label="Tasks Map">
+            <a id="home" class="home" href="#home" aria-label="HOME">HOME</a>
+            <!-- 四个分支 -->
+            <section id="health" class="zone zone-health" aria-label="Health">Health</section>
+            <section id="study" class="zone zone-health" aria-label="Study">Study</section>
+            <section id="social" class="zone zone-health" aria-label="Social">Social</section>
+            <section id="growth" class="zone zone-health" aria-label="Growth">Growth</section>
+        </div>
+    </div>
 </body>
 </html>
