--- a/pools.html
+++ b/pools.html
@@ -128,6 +128,30 @@
           box-sizing: border-box;
           padding: 16px;
       }
+      .world{
+          position: relative;
+          height: 100%;
+          display: grid;
+          place-items: center;
+      }
+      .hub{
+          position: relative;
+          width: 520px;
+          height: 520px;
+      }
+      .ring{
+          position: absolute; inset: 0;
+          border-radius: 50%;
+          background: 
+              radial-gradient(circle,
+                              rgba(255,255,255,0) 44%,
+                              rgba(255,255,255,0.9) 47%,
+                              rgba(255,255,255,0) 53%),
+              radial-gradient(circle,
+                              rgba(255,255,255,0.22),
+                              rgba(255,255,255,0) 65%);
+          filter: drop-shadow(0 0 18px rgba(255,255,255,0.35));
+      }
       
     </style>
 </head>
@@ -141,7 +165,9 @@
     </h1>
     <div class="panel">
         <div class="world" aria-label="Tasks Map">
-            
+            <div class="hub">
+                <div vlass="ring"></div>
+            </div>
         </div>
     </div>
 </body>
