--- a/pools.html
+++ b/pools.html
@@ -166,7 +166,7 @@
     <div class="panel">
         <div class="world" aria-label="Tasks Map">
             <div class="hub">
-                <div vlass="ring"></div>
+                <div class="ring"></div>
             </div>
         </div>
     </div>
