--- a/pools.html
+++ b/pools.html
@@ -142,15 +142,28 @@
       .ring{
           position: absolute; inset: 0;
           border-radius: 50%;
-          background: 
-              radial-gradient(circle,
-                              rgba(255,255,255,0) 44%,
-                              rgba(255,255,255,0.9) 47%,
-                              rgba(255,255,255,0) 53%),
-              radial-gradient(circle,
-                              rgba(255,255,255,0.22),
-                              rgba(255,255,255,0) 65%);
-          filter: drop-shadow(0 0 18px rgba(255,255,255,0.35));
+          background: none;
+          box-shadow: none;
+      }
+      .ring::before{
+          content: "";
+          position: absolute; inset: -8px;
+          border-radius: 50%;
+          background: radial-gradient(closest-side,
+                                      rgba(255,255,255,0) 96%,
+                                      rgba(255,255,255,0.28) 98%,
+                                      rgba(255,255,255,0) 100%);
+          filter: blur(10px);
+          pointer-events: none;
+      }
+      .ring::after{
+          content: "";
+          position: absolute; inset: 0;
+          border-radius: 50%;
+          border: 3px solid #fff;
+          box-shadow:
+              0 0 6px egba(255,255,255,0.35);
+          pointer-events: none;
       }
       
     </style>
