--- a/pools.html
+++ b/pools.html
@@ -165,7 +165,14 @@
               0 0 6px egba(255,255,255,0.35);
           pointer-events: none;
       }
-      
+
+      .node .icon-img {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          object-fit: cover;
+          display: block;
+      }
     </style>
 </head>
 <body>
@@ -180,6 +187,21 @@
         <div class="world" aria-label="Tasks Map">
             <div class="hub">
                 <div class="ring"></div>
+                <button class="node" style="--c:#ff4f7a" data-label="Health" aria-label="Health">
+                    <img src="health.png" alt="Health" class="icon-img">
+                </button>
+
+                <button class="node" style="--c:#20cbd0" data-label="Social" aria-label="Social">
+                    <img src="social" alt="Social" class="icon-img">
+                </button>
+
+                <button class="node" style="--c:#ffd166" data-label="Growth" aria-label="Growth">
+                    <img src="growth" alt="Growth" class="icon-img">
+                </button>
+
+                <button class="node" style="--c:#7b7bff" data-label="Study" aria-label="Study">
+                    <img src="study" alt="Study" class="icon-img">
+                </button>
             </div>
         </div>
     </div>
