--- a/pools.html
+++ b/pools.html
@@ -192,15 +192,15 @@
                 </button>
 
                 <button class="node" style="--c:#20cbd0" data-label="Social" aria-label="Social">
-                    <img src="social" alt="Social" class="icon-img">
+                    <img src="social.png" alt="Social" class="icon-img">
                 </button>
 
                 <button class="node" style="--c:#ffd166" data-label="Growth" aria-label="Growth">
-                    <img src="growth" alt="Growth" class="icon-img">
+                    <img src="growth.png" alt="Growth" class="icon-img">
                 </button>
 
                 <button class="node" style="--c:#7b7bff" data-label="Study" aria-label="Study">
-                    <img src="study" alt="Study" class="icon-img">
+                    <img src="study.png" alt="Study" class="icon-img">
                 </button>
             </div>
         </div>
